[ML] Fail model deployment if all allocations cannot be provided
When we cannot scale up (autoscaling is disabled) we should fail
requests to start a trained model deployment whose allocations
cannot be provided.